tests/errors/4_type_errors/boolop-test2.ifj16.java
class Main {
    static void run() {
        int a = true;  // 1
    }
}
